# fastserve-ai

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  404.html  CNAME  LICENSE  MANIFEST.in  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: main.yml  mkdocs_ci.yml  publish-to-test-pypi.yml
404/: index.html
CHANGELOG/: index.html
css/: index.html
docs/: CHANGELOG.md  CNAME  css.md  index.md  requirements.txt
docs/fastserve/: containerization.md
docs/fastserve/models/: face_detection.md  image_classification.md  image_gen.md
docs/fastserve/models/llms/: hf.md  (+2 more)
examples/: llama-cpp.ipynb
examples/docker-compose-example/: Dockerfile  api.py  docker-compose.yml  requirements.txt
fastserve/: index.html
fastserve/containerization/: index.html
fastserve/models/face_detection/: index.html
fastserve/models/image_classification/: index.html
fastserve/models/image_gen/: index.html
search/: search_index.json
src/benchmarks/: locustfile.py
src/fastserve/: __init__.py  __main__.py  base_fastserve.py  batching.py  core.py  fastserve.py  handler.py  middleware.py  serve_llama_cpp.py  utils.py
src/fastserve/client/: __init__.py  vllm.py
src/fastserve/deploy/: __init__.py  lightning.py
src/fastserve/models/: __init__.py  __main__.py  huggingface.py  image_classification.py  llama_cpp.py  sdxl_turbo.py  ssd.py  vllm.py
src/template/: __init__.py
src/ui/: index.html  package-lock.json  package.json
src/ui/src/: App.vue  main.js
tests/: __init__.py  test_batching.py  test_core.py
(+11 files in other folders)
