[metadata]
name = fastserve
version = attr: fastserve.__version__
author = Aniket Maurya
author_email = AUTHOR_EMAIL
description = Package description
description-file = README.md
long_description = file: README.md, LICENSE.md
long_description_content_type = text/markdown
url = package_url
license = Apache License 2.0
keywords = opensource, python

[options]
python_requires = >=3.8
package_dir =
    = src
