[metadata]
name = fastserve
version = attr: fastserve.__version__
author = Aniket Maurya
author_email = theaniketmaurya@gmail.com
description = 'Machine Learning Serving focused on GenAI & LLMs with simplicity as the top priority.'
description-file = README.md
long_description = file: README.md, LICENSE.md
long_description_content_type = text/markdown
url = https://github.com/aniketmaurya/fastserve
license = Apache License 2.0
keywords = opensource, python

[options]
python_requires = >=3.8
package_dir =
    = src
